add starter assets

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,1 +1,13 @@
+h1, h2, h3, h4, h5, h6, p {
+  font-family: 'Victor Mono';
+}
 
+h1 {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+h2 {
+  font-size: 1.25rem;
+  font-weight: 600;
+}
